Fixes for safari overflow

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -9,6 +9,7 @@ body{
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  font-family: Orbitron;
 }
 
 .home-container{
@@ -18,10 +19,9 @@ body{
   text-align: center;
 }
 
-.text{
-  margin-top: 6rem;
-  font-family: Orbitron;
-  font-size: 3rem;
+h1{
+  font-size: 2rem;
+  letter-spacing: 2px;
   color: white;
   text-shadow: 4px 4px 4px #ff8533;
 }
