--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -1,4 +1,4 @@
-.navbar-container{
+  .navbar-container{
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -50,23 +50,27 @@
 }
 
 @media screen and (max-width:768px){
-  body{
-    overflow-x: hidden; 
+  html,body{
+    overflow-x: hidden;
+    position: relative;
   }
   
   .nav-links{
+    overflow: hidden;
     position: absolute;
     display: flex;
     flex-direction: column;
     align-items: center;
-    top: 8vh;
+    margin: 2px;
+    top: 9vh;
     right: 0px;
-    height: 92vh;
+    height: 100%;
     min-width: 100%;
     background-color: burlywood;
     transform: translateX(100%);
     transition: all 0.7s ease-in;
     z-index: 2;
+
   }
   
   .burger-menu{
